== Git

* Minor enhancements

  * Detect infinite redirects and raise a Webrat::InfiniteRedirectError (Daniel Lucraft)

* Bug fixes

  * Quote --chdir option to mongrel_rails to support RAILS_ROOTs with spaces
    (T.J. VanSlyke)
    
== 0.4.1 / 2009-01-31

* Minor enhancements

  * Support Sinatra 0.9 (Harry Vangberg)
  * Update query param parsing to work with latest Edge Rails
  * Added #redirected_to method to easily check where an external redirect was
    redirected to (Adam Greene)
  * Recognize input tags with type button (Lena Herrmann)
  * Add uncheck method to Selenium mode (Lee Bankewitz)
    
* Bug fixes

  * Make requests to a Rails app using a full URL instead of a relative path. This change
    is helpful for Rails apps that use subdomains. (John Hwang and Zach Dennis)
  * Follow redirects that are on the same domain but a different subdomain
    (Adam Greene)
  * rescue from Webrat::TimeoutError in selenium matchers which allows NegativeMatchers
    to behave correctly (Noah Davis)
  * Switch to using selenium.click instead of .check when checking a checkbox
    (Noah Davis)
  * Create tmp/pids directory if directory does not exist. (Amos King and Mike Gaffney)  
  * Setup deprecated writers for the selenium_environment= and selenium_port= config
  * Ensure the previous pages params aren't passed through redirect (Daniel Lucraft and
    Bryan Helmkamp)
  * Labels should only search for fields within the current scope (Kyle Hargraves)

== 0.4.0 / 2009-01-18

* _IMPORTANT_ Breaking change:

  * Removed init.rb auto-require of webrat/rails
  * Removed auto-require of webrat/rails when requiring webrat when RAILS_ENV is
    defined

  In your env.rb or test_helper.rb file, ensure you have something like:

    require "webrat"

    Webrat.configure do |config|
      config.mode = :rails
    end

* Major enhancements

  * Major improvements to Webrat::Selenium (Many contributors listed here)