@@ -6,9 +6,10 @@
 
 * Bug fixes
 
+  * Accept do/end blocks in matchers. [#157] (Peter Jaros)
   * Quote --chdir option to mongrel_rails to support RAILS_ROOTs with spaces
     (T.J. VanSlyke)
-    
+
 == 0.4.1 / 2009-01-31
 
 * Minor enhancements
